# snapkit-v2

./: Dockerfile  README.md  pyproject.toml
docs/: ARCHITECTURE_OF_HARMONY.md  USER-GUIDE.md
examples/: harmony_dashboard.html  harmony_demo.py
firmware/esp32_mpu6050_imu/: README.md  esp32_mpu6050_imu.ino
js/: snapkit.ts
snapkit/: __init__.py  audio.py  clever_tokens.py  cli.py  connectome.py  eisenstein.py  eisenstein_voronoi.py  executive.py  fleet.py  governor.py  midi.py  midi_io.py  othismos_bridge.py  sandbox.py  spectral.py  temporal.py
tests/: test_audio.py  test_clever_tokens.py  test_executive.py  test_fleet.py  test_governor.py  test_midi_io.py  test_othismos_bridge.py  test_sandbox.py  test_v26_fixes.py  test_v28_fixes.py
