[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cocapn-snapkit"
version = "2.2.0"
description = "Eisenstein lattice snap, temporal analysis, connectome detection, harmony governor, and hypothesis sandbox"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "SuperInstance"}]
keywords = ["eisenstein", "lattice", "midi", "fep", "active-inference", "constraint-theory", "harmony", "governor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]
midi = ["mido>=1.3"]

[tool.setuptools]
packages = ["snapkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
